Switch to FormSubmit.co with Sainojuraghu005@gmail.com, fix nav alignment, add Tech M job posting

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -431,7 +431,7 @@ h6 {
 * Desktop Navigation 
 */
 .navbar {
-  padding-left: 45%;
+  padding-left: 25%;
 }
 
 .navbar ul {
